Updated header font and minor css fix
Description:
1. Header font weight reduced by 100.
2. cutout in header was stretched on post pages.
Notes:
None

--- a/public/css/styles0.css
+++ b/public/css/styles0.css
@@ -65,7 +65,7 @@ h2 {
 
 #header-photo {
     height: 200%;
-    width: 150%;
+    width: 120%;
     z-index: 2;
     opacity: .9;
 }
